public/css/main.css
/*@import url("https://fonts.google.com/specimen/Exo+2");*/
/*@import url("stylesheet.css");*/
/* @font-face kit by Fonts2u (http://www.fonts2u.com) */ 
@font-face {
  font-family:"GARRA";
  src: url("../font/GARA.TTF") format("truetype");
  font-weight:normal;
  font-style:normal;
}
@font-face {
  font-family:"Agaler";
  src: url("../font/AGGALER.TTF") format("truetype");
  font-weight:normal;
  font-style:normal;
}
@font-face {
  font-family:"Souvernir";
  src: url("../font/SouvenirNormal.ttf") format("truetype");
  font-weight:normal;
  font-style:normal;
}

* {
  font-family: 'Arimo', sans-serif;
  font-size: 1.02em;
  color:#4c4c4c;
}

::selection {
  background: #fed419; /* WebKit/Blink Browsers */
}
::-moz-selection {
  background: #fed419; /* Gecko Browsers */
}

::-webkit-scrollbar { /*Not supported in Firefox, IE, MS Edge*/
    width: 10px;
}
::-webkit-scrollbar-track {
    box-shadow: inset 0 0 5px grey; 
    border-radius: 10px;
}
::-webkit-scrollbar-thumb {
    background: #0a97d5; 
    border-radius: 10px;
}
::-webkit-scrollbar-thumb:hover {
    background: #006D9D; 
}
::-webkit-scrollbar-thumb:active {
    background: #003f5b; 
}

a {
  color: #0a97d5;
}

a:hover {
  text-decoration: none;
  transition: 0.3s;
}

.pointer,
a[_href] {
  cursor: pointer;
}
html, body{
  overflow-x: hidden; 
}
h1,h2,h3,h4,h5{
  color:#4c4c4c;
  font-weight: bold;
}

header {
  background-color: #fff;
  z-index: 15;
}

h1.line-through {
  margin-bottom: 25px;
}

.reset {
  margin: 0;
  padding: 0;
  border: none;
  outline: none;
}

.reset-boldness {
  font-weight: normal;
}

.no-scroll {
  overflow-x: hidden;
}

#back-to-top {
  position: fixed;
  bottom: -100px;
  right: 30px;
  z-index: 99;
  font-size: 18px;
  border-radius: 4px;
  width: 45px;
  height: 45px;
  background-color: #0a97d5;
  box-shadow: 3px 5px 18px #888888;
  color: white;
  cursor: pointer;
  transition: font-size ease-in-out 0.3s, bottom ease-in-out 0.3s, width 0.1s ease-in-out 0.3s, height 0.1s ease-in-out 0.3s;
}

#back-to-top span {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

#back-to-top:hover {
  background-color: #555;
}

.container {
  margin-top: 15px;
}

.blue {
  color: #0a97d5;
}

.glyphicon-menu-down, .glyphicon-menu-right {
  font-size:0.7em;
  color: #0a97d5;
}

.desktop {
  position: relative;
  margin-top: 15px;
  margin-bottom: 15px;
  /*z-index: 500;*/
  /*border: 1px solid black;*/
}

.desktop ul {
  margin-bottom: 0!important;
}

nav li.menu-item > a {
  font-weight: bold;
  padding-bottom: 2px; 
  position: relative;
  color: #0a97d5;
  text-decoration: none;
}

.desktop li.menu-item > a:before {
  content: "";
  position: absolute;
  width: 100%;
  height: 2px;
  bottom: 0;
  left: 0;
  background-color: #0a97d5;
  visibility: hidden;
  -webkit-transform: scaleX(0);
  transform: scaleX(0);
  -webkit-transition: all 0.3s ease-in-out 0s;
  transition: all 0.3s ease-in-out 0s;
}

.desktop li.menu-item > a:hover:before {
  visibility: visible;
  -webkit-transform: scaleX(1);
  transform: scaleX(1);
}

.dropdown {
    position: static;
    display: block;
    z-index: 510;
    /*height: 54px;*/
    /*padding: 0 20px; */
 
    -webkit-transition: all .3s ease;
    -moz-transition: all .3s ease;
    -o-transition: all .3s ease;
    -ms-transition: all .3s ease;
    transition: all .3s ease;
}

.text-normal-case {
  text-transform: none!important;
}

.mega-menu {
  box-sizing: content-box;
  position: absolute;
  width: 100%;
  top: 40px;
  right: -50px;
  padding: 25px;
  z-index: 99;
  opacity: 0;
  visibility: hidden;
 
  background: #fff;
  border-radius: 0 0 3px 3px;
  
  -moz-box-shadow: 0 0 3px #ccc;
  -webkit-box-shadow: 0 0 3px #ccc;
  box-shadow: 0 0 3px #ccc;
 
  -webkit-transition: all .3s ease .15s;
  -moz-transition: all .3s ease .15s;
  -o-transition: all .3s ease .15s;
  -ms-transition: all .3s ease .15s;
  transition: all .3s ease .15s;
}

.mega-menu h4 {
  margin-bottom: 13px;
}

.dropdown:hover .mega-menu {
  opacity: 1;
  visibility: visible;
  overflow: auto;
}

.new {
  font-weight: bold;
  color: white;
  font-size: 0.7em;
  background-color: red;
  vertical-align: super;
  margin-right: 2px;
}

.search {
  cursor: pointer;
}

#hamburger {
  display: none;
  position: absolute;
  top: 10px;
  right: 25px;
  z-index: 16;
  font-size: 2em;
}

.mobile {
  background-color: #fff;
  display: none;
  /*top: 0;*/
  /*right: -800px;*/
}
.mobile #main, .mobile #loyal-menu, .mobile #products-menu {
  /*display: none;*/
  background-color: #fff;
  position: absolute;
  top: 0;
  right: -800px;
  z-index: 15;
  width: 100%;
  transition: all 0.5s ease;
}

.mobile #loyal-menu {

}

.mobile #products-menu {

}

.mobile .menu-item {
  border-bottom: 1px solid #aaa;
  padding: 20px 0;
  margin: 0 20px;
}

.products .row  {
  margin-top: 20px;
}

.products .row  p:after {
  content: " лв.";
}

.products img {
  display: block;
  margin-left: auto;
  margin-right: auto;
}
/*TODO: 
  Problem: underlines the whole choice div 
  FIX: underline only the a which is hovered 
*/
/*.choice li a:before {
  content: "";
  position: absolute;
  width: 100%;
  height: 2px;
  bottom: 0;
  left: 0;
  background-color: #0a97d5;
  visibility: hidden;
  -webkit-transform: scaleX(0);
  transform: scaleX(0);
  -webkit-transition: all 0.3s ease-in-out 0s;
  transition: all 0.3s ease-in-out 0s;
}

.choice li a:hover:before {
   visibility: visible;
  -webkit-transform: scaleX(1);
  transform: scaleX(1);
}*/ 

.link-banner {
  background-color: #f1f1f1;
  margin-top: 35px;
}

.text-banner {
  margin-top: 20%;
  margin-left: 10%;
  padding-right: 10%;
  /*margin-right: 15%;*/
  /* width: 30%; */
}

.text-banner h2 {
  font-size: 2em;
}
.text-banner p {

}

.text-banner button {
  margin-top: 10px;
}

.image-banner {
  padding: 0px;
}

.flexed {
  display: flex;
  flex-wrap: wrap;
}
.item-full{
  flex: 1 100%;
}
.item-3{
  flex:1 10%;
  padding : 15px;
}
/* ... */

